Deploy code to AKS

--- a/azure-vote/azure-vote/templates/index.html
+++ b/azure-vote/azure-vote/templates/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <h1>We are recording the Telemetry data</h1>
     <div id="container">
         <form id="form" name="form" action="/"" method="post"><center>
         <div id="logo">{{title}}</div>
