--- a/azure-vote/templates/index.html
+++ b/azure-vote/templates/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1>We are recording the Telemetry data</h1>
+    <h1>This is a manual deployment.</h1>
     <div id="container">
         <form id="form" name="form" action="/"" method="post"><center>
         <div id="logo">{{title}}</div>
